add: footer to app with bug report link

--- a/src/App.scss
+++ b/src/App.scss
@@ -1197,4 +1197,10 @@ p.label {
   padding-bottom: 0;
 }
 
+.bug-report {
+  align-self:flex-start;
+  color: gray;
+  text-decoration: underline;
+  margin-top: 2rem;
+}
 
