--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,4 @@
-@import '../../styles//variables.scss';
+@import "../../styles//variables.scss";
 
 .footer {
   width: 100%;
@@ -31,4 +31,7 @@
 
 .footer-home {
   padding-bottom: 12em;
+  margin-top: 10em;
+  color: black;
+  background-color: #f3f2f0;
 }
