--- a/src/App.scss
+++ b/src/App.scss
@@ -624,11 +624,6 @@ h2 {
   text-align: left;
 }
 
-.header-title {
-  font-size: 30px;
-  font-weight: 600;
-}
-
 .main-title {
   font-size: 50px;
   font-weight: 700;
@@ -1353,13 +1348,6 @@ p.label {
   left: 0;
   width: 100%;
   height: 100%;
-  // background: radial-gradient(
-  //     circle at center,
-  //     transparent,
-  //     rgb(120, 120, 120) 90%
-  //   ),
-  //   // rgb(11, 140, 144) 90%
-  //   radial-gradient(circle at center, transparent, rgb(216, 183, 183) 90%);
   mix-blend-mode: darken;
 }
 
@@ -1412,11 +1400,6 @@ p.label {
   border-radius: 20px;
   color: "white";
   justify-content: "center";
-  // background: linear-gradient(
-  //   to bottom right,
-  //   rgba(8, 11, 42, 0.4),
-  //   rgba(40, 48, 137, 0.8)
-  // );
 }
 
 .section-layout-flex {
@@ -1429,11 +1412,6 @@ p.label {
   color: "white";
   justify-content: "center";
   align-items: center;
-  // background: linear-gradient(
-  //   to bottom right,
-  //   rgba(8, 11, 42, 0.4),
-  //   rgba(40, 48, 137, 0.8)
-  // );
 }
 
 @media (max-width: 767px) {
@@ -1491,4 +1469,11 @@ p.label {
   margin-right: 10px;
   font-weight: 600;
   font-family: Inter;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 25px;
 }
